[package]
name = "active_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }

